# notp

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: cd.yml  ci.yml
src/: cli_args.rs  error.rs  file.rs  main.rs  operations.rs  otp.rs  store.rs  util.rs
src/operations/: add.rs  delete.rs  get.rs  list.rs
src/ops/: add.rs  delete.rs  get.rs  list.rs  mod.rs
src/store/: kv_store.rs
