[package]
name = "totp"
version = "0.1.0"
authors = ["Taylan Dogan <doganntaylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
dirs = "2.0"
ring = "0.16.12"
base32 = "0.4.0"
byteorder = "1.3.2"
oath = "0.10.2"