[package]
name = "notp"
version = "2.1.0"
authors = ["Taylan Dogan <doganntaylan@gmail.com>"]
edition = "2018"
description = "One Time Password Generator tool that is meant to be used on CLI."
license = "MIT"
repository = "https://github.com/kondanta/notp"
readme="README.md"
keywords= ["2fa", "otp", "2factor"]
categories = ["command-line-utilities"]
homepage = "https://github.com/kondanta/notp"
documentation = "https://docs.rs/notp"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kv"]

# File based database
kv-store = ["kv"]

[dependencies]
structopt = { version = "0.3" }
dirs = "2.0"
ring = "0.16.12"
base32 = "0.4.0"
byteorder = "1.3.2"
oath = "0.10.2"
magic-crypt = "3.0.0"
kv = { version = "0.20.2", optional = true }
rpassword = "4.0.5"

[profile.dev]
# This isn't required for development builds, but makes development
# build behavior match release builds. To enable unwinding panics
# during development, simply remove this line.
opt-level = 0
panic = 'abort'

[profile.release]
opt-level = 3       # Optimize binary speed{preffered}. z for binary size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic